Fixed a bug where the vulnerability table is too small in the profile page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,6 +233,10 @@ html, body {
     font-size: 1.3rem;
 }
 
+.dateReported {
+    min-width: 17rem;
+}
+
 /* Profile CSS */
 .profileNameCol {
     height: 10rem;
